--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,8 @@ body {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    height: 100%;
+  
   }
   
   .past {
@@ -68,4 +70,11 @@ body {
   .saveBtn i:hover {
     font-size: 20px;
     transition: all .3s ease-in-out;
+ 
+  }
+
+  i {
+    width: 100%;
+    height: 100%;
+    padding: 0 auto;
   }
