--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
+    padding-bottom: 5px;
   }
   
   .description{
@@ -77,4 +78,9 @@ body {
     width: 100%;
     height: 100%;
     padding: 0 auto;
+  }
+
+  i:focus,
+  button:focus {
+    outline: none;
   }
