--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,15 @@ body {
     border: none;
     resize: none;
     color: #000000;
-    border-left: 1px solid black;
+    border-left: 1px solid #000000;
     padding: 10px;
+    outline-color: #000000;
   }
   
   .jumbotron {
     text-align: center;
     background-color: transparent;
-    color: black;
+    color: #000000;
     border-radius: 0;
     border-bottom: 10px solid black;
     padding-bottom: 5px;
@@ -42,17 +43,18 @@ body {
     color: #000000;
     border-top: 1px dashed #000000;
     height: 100%;
+    padding: auto auto;
   
   }
   
   .past {
     background-color: #d3d3d3;
-    color: white;
+    color: #000000;
   }
   
   .present {
     background-color: #ff6961;
-    color: white;
+    color: #000000;
   }
   
   .future {
